Avalara Fullqa/src/Rollup Helper/objects/PS_Exception__c.object
<CustomObject>
    <fields>
        <fullName>DML_Exception_Message__c</fullName>
        <description>The message reported from a DMLException, if any.</description>
        <label>DML Exception Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DML_Failed_Record_Ids__c</fullName>
        <description>The record IDs, if any, of the failed records recorded from a DMLException.</description>
        <label>DML Failed Record Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DML_Failed_Records_Count__c</fullName>
        <description>The count of failed records reported from a DMLException, if any.</description>
        <label>DML Number of Failed Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DML_Problem_Field_Names__c</fullName>
        <description>If any, the problem fields associated with the failures recorded from a DMLException.</description>
        <label>DML Problem Field Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DML_Status_Code__c</fullName>
        <description>The status code, if any, from a DML Exception.</description>
        <label>DML Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Stack_Trace__c</fullName>
        <label>Exception Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Formatted_Date__c</fullName>
        <description>Holds the date of the exception and displays it according to the users profile in local time.</description>
        <label>Formatted Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Occurrences__c</fullName>
        <label>Number of Occurrences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <inlineHelpText>The object that experienced the Rollup Helper exception.</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Affected_Target_Fields__c</fullName>
        <description>If any, the field(s) being processed when the error was encountered.</description>
        <label>Potentially Affected Target Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <inlineHelpText>The ID of the record that experienced an exception.</inlineHelpText>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Link__c</fullName>
        <formula>HYPERLINK( Record_Id__c, Record_Id__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rollup_Link__c</fullName>
        <formula>IF(!ISBLANK(Rollup_Name__c), HYPERLINK(&quot;/apex/PS_RollupType?s=&quot; &amp;  Rollup_Name__c, &quot;Link to the Rollup&quot;), &apos;No rollup link available.&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rollup Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rollup_Name__c</fullName>
        <description>The name of the rollup setting that caused the error.</description>
        <label>Rollup Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Rollup Helper Exception</label>
    <nameField>
        <displayFormat>Exception #{00000}</displayFormat>
        <label>Rollup Helper Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rollup Helper Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>